change mission statement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import bhlogo from '../bhlogo.webp';
     <body>
         <main>
             <div class="flex flex-col p-10">
-                <span class="flex justify-center mb-10">
-                    <Image width={170} src={bhlogo} alt="blackheaven records logo"/>
-                </span>
+                <!-- <span class="flex justify-center mb-10"> -->
+                <!--     <Image width={170} src={bhlogo} alt="blackheaven records logo"/> -->
+                <!-- </span> -->
                 <Image class="mb-10" src={lifechordBanner} alt="lifechord banner"/>
                 <Image src={lifechordLogo} alt="lifechord logo"/>
                 <div class="px-2 py-3 mt-10 flex flex-row justify-between font-jetbrains">
@@ -28,53 +28,68 @@ import bhlogo from '../bhlogo.webp';
                 </div>
                 <article class="px-2 mt-10 flex flex-col justify-start font-jetbrains font-normal gap-y-10">
                     <p class="w-2/5">
-                        In a world so consumed by hate and raging apathy toward fellow man,
-                        we hold the virtue that every person has value, and in their breath, that value
-                        is meant to be shared and celebrated. This life is the only one we get to live,
-                        and it is every individual's right to choose how they want to live that existence.
-                        Every man, woman, and child—across all creeds, races, and nationalities has
-                        a story to tell and love to spread.
+                        I hate change. It feels as though there is so much to say, yet it's hard to find
+                        the right words to say it with. I actively avoid the feeling of inadequacy,
+                        and dissapointment. I actively avoid feeling as though the world around me
+                        is bending out of my will. It's the anxiety that comes with the forming of
+                        new and novel expierences that cause me to tense up and scream on the inside.
                     </p>
-
-                    <p class="grid grid-cols-[max-content_1fr] gap-x-10">
-                        <span>The friends you make</span>
-                        <span>...and the ones you lost</span>
-
-                        <span>The people you love you</span>
-                        <span>...and those who despise you</span>
-
-                        <span>The memories you hold dear</span>
-                        <span>...and the thoughts you'd rather forget</span>
-
-                        <span>The drawings you made</span>
-                        <span>...and the pages you tore apart</span>
-
-                        <span>The songs you scream</span>
-                        <span>...and the ones you cried to</span>
-
-                        <span>The hearts you broke</span>
-                        <span>...and those you mended</span>
-
-                        <span>The promises you kept</span>
-                        <span>...and the ones that faded away</span>
-
-                        <span>The connections you formed</span>
-                        <span>...and the bridges burned</span>
-
-                        <span>The communities you became a part of</span>
-                        <span>...and the one you renounced</span>
-
-                        <span>The overwhelming love you had to give</span>
-                        <span>...and the love the world forgot to give back</span>
-                    </p>
-
                     <p class="w-2/5">
-                    These are the songs and melodies that scream through our hearts. So bare witness, and share
-                    with us in all the things no one thought could be shared.
+                        And there's this sharp feeling in my chest. The active choice to put myself in others place.
+                        The need to show compassion. The need to takes what's broken and mend it back together.
+                        I renounce the thought of being complacent. I renounce the thought that what I say and what I do,
+                        does not matter. I renounce a life of stillness. I renounce this overwhelming feeling of apathy.
                     </p>
+                    <p class="w-2/5">
+                        I must love how much life changes. The friends I make I will lose. The memories I hold dear
+                        I will forget. The things I create will be destroyed. The life I get to live, will end.
+                        All the love I have to give to this world... and all the love that the world will never give back,
+                        will go unfelt. This is what I live for. I need this. I feel this. I believe this.
+                    </p>
+                    <p class="w-2/5">
+                        I will look beyond myself.
+                    </p>
+
+                    <!-- <p class="grid grid-cols-[max-content_1fr] gap-x-10"> -->
+                    <!--     <span>The friends you make</span> -->
+                    <!--     <span>...and the ones you lost</span> -->
+                    <!---->
+                    <!--     <span>The people you love you</span> -->
+                    <!--     <span>...and those who despise you</span> -->
+                    <!---->
+                    <!--     <span>The memories you hold dear</span> -->
+                    <!--     <span>...and the thoughts you'd rather forget</span> -->
+                    <!---->
+                    <!--     <span>The drawings you made</span> -->
+                    <!--     <span>...and the pages you tore apart</span> -->
+                    <!---->
+                    <!--     <span>The songs you scream</span> -->
+                    <!--     <span>...and the ones you cried to</span> -->
+                    <!---->
+                    <!--     <span>The hearts you broke</span> -->
+                    <!--     <span>...and those you mended</span> -->
+                    <!---->
+                    <!--     <span>The promises you kept</span> -->
+                    <!--     <span>...and the ones that faded away</span> -->
+                    <!---->
+                    <!--     <span>The connections you formed</span> -->
+                    <!--     <span>...and the bridges burned</span> -->
+                    <!---->
+                    <!--     <span>The communities you became a part of</span> -->
+                    <!--     <span>...and the one you renounced</span> -->
+                    <!---->
+                    <!--     <span>The overwhelming love you had to give</span> -->
+                    <!--     <span>...and the love the world forgot to give back</span> -->
+                    <!-- </p> -->
+                    <!---->
+                    <!-- <p class="w-2/5"> -->
+                    <!-- These are the songs and melodies that scream through our hearts. So bare witness, and share -->
+                    <!-- with us in all the things no one thought could be shared. -->
+                    <!-- </p> -->
                 </article>
-                <footer class="flex justify-center mt-10">
+                <footer class="flex flex-col items-center justify-center mt-10">
                     <Image width={170} src={bhlogo} alt="blackheaven records logo"/>
+                    <a class="text-sm hover:underline font-jetbrains" href="https://blackheavenrecords.bigcartel.com/">Blackheaven Records</a>
                 </footer>
             </div>
         </main>
