--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,15 +28,15 @@ import bhlogo from '../bhlogo.webp';
                 </div>
                 <article class="px-2 mt-10 flex flex-col justify-start font-jetbrains font-normal gap-y-10">
                     <p class="w-2/5">
-                        I hate change. It feels as though there is so much to say, yet it's hard to find
+                        It feels as though there is so much to say, yet it's hard to find
                         the right words to say it with. I actively avoid the feeling of inadequacy,
-                        and dissapointment. I actively avoid feeling as though the world around me
+                        and disappointment. I actively avoid feeling as though the world around me
                         is bending out of my will. It's the anxiety that comes with the forming of
-                        new and novel expierences that cause me to tense up and scream on the inside.
+                        new and novel experiences that cause me to tense up and scream on the inside.
                     </p>
                     <p class="w-2/5">
-                        And there's this sharp feeling in my chest. The active choice to put myself in others place.
-                        The need to show compassion. The need to takes what's broken and mend it back together.
+                        And there's this sharp feeling in my chest. The active choice to put myself in others' place.
+                        The need to show compassion. The need to take what's broken and mend it back together.
                         I renounce the thought of being complacent. I renounce the thought that what I say and what I do,
                         does not matter. I renounce a life of stillness. I renounce this overwhelming feeling of apathy.
                     </p>
