--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,22 @@
 ---
 import "../styles/global.css";
 ---
-<base>
-    <div class="h-screen flex flex-col justify-center items-center font-jetbrains gap-y-5">
-        <span class="text-5xl font-extrabold">404</span>
-        <span>What you seek is not here.</span>
-    </div>
-</base>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Lifechord</title>
+        <!-- Standard favicon -->
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <!-- IOS / android favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="manifest" href="/favicon/site.webmanifest">
+    </head>
+    <body>
+        <div class="h-screen flex flex-col justify-center items-center font-jetbrains gap-y-5">
+            <span class="text-5xl font-extrabold">404</span>
+            <span>What you seek is not here.</span>
+        </div>
+    </body>
+</html>
