--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,20 +22,21 @@ import bhlogo from "../bhlogo.webp";
             <Image class="w-full max-w-md object-contain" loading="eager" src={lifechordBanner} alt="lifechord banner"/>
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-md text-left">
                 <p>
-                Life and all it's shortcomings is beautiful. The friends I make I will lose. The memories I hold dear
-                I will forget. The things I create will be destroyed. All the love I have to give
-                to this world... and all the love the world will never give back.
+                Life and all its flaws are beautiful. The friends I make, I will lose.
+                The memories I hold dear, I will forget. The things I create will be destroyed.
+                All the love I give to this world... and all the love the world will never give back.
                 </p>
                 <p>
                 I will extend my hand to those in need of empathy and compassion.
-                I will offer assistance to those who can't muster up the courage to assist themselves.
-                I will be the voice for those who are too afraid to be critized.
+                I will offer assistance to those who can't muster the courage to assist themselves.
+                I will be the voice for those who are too afraid to be criticized.
                 </p>
                 <p>
-                I renounce this festering hate plauging humanity.
-                These truths is what makes life is worth dying for. I believe this.</p>
+                I renounce this festering hate plaguing humanity. These truths are what make life worth dying for. I believe this.
+                </p>
                 <p>Rest assured...</p>
                 <p>Things. Will. Change.</p>
+
             </div>
             <footer class="flex flex-col xs:flex-row items-center gap-6 sm:gap-10">
                 <Image class="w-52 sm:w-40 object-contain" loading="eager" src={lifechordLogo} alt="lifechord logo"/>
