--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,17 +23,20 @@ import PageTitle from "../components/PageTitle.astro";
             <Image class="w-full max-w-md object-contain" loading="eager" src={lifechordBanner} alt="lifechord banner"/>
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-md text-left">
                 <p>
-                Life and all its flaws are beautiful. The friends I make, I will lose.
-                The memories I hold dear, I will forget. The things I create will be destroyed.
-                All the love I give to this world... and all the love the world will never give back.
+                Bare witness the creation of a righteous culture, for the world is going through
+                a revolution infront of your eyes. Now more than ever, is it important to foster
+                a community with your peers. Make memories that last lifetimes. Scream to your heart's
+                content from the tallest rooftops. Show the world that your voice will go unheard.
                 </p>
                 <p>
-                I will extend my hand to those in need of empathy and compassion.
-                I will offer assistance to those who can't muster the courage to assist themselves.
-                I will be the voice for those who are too afraid to be criticized.
+                The hands of fate will be extended to those in need of empathy and compassion.
+                It will offer assistance to those who can't muster up the courage to assist themselves.
+                And the voices of its children be will echoed throughout the halls of history.
                 </p>
                 <p>
-                I renounce this festering hate plaguing humanity. These truths are what make life worth dying for. I believe this.
+                Hate... Upon Hate... Upon Hate... We renounce this festering disease plaguing humanity.
+                You are not a slave to your ailments, you are human, and as human we must care.
+                We must look forward. We must be better.
                 </p>
                 <p>Rest assured...</p>
                 <p>Things. Will. Change.</p>
