--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,7 @@
 ---
 const links = [
-  { name: "Shows", href: "/shows" },
+  { name: "Home", href: "/" },
+  { name: "Lyrics", href: "/lyrics" },
 ];
 ---
 
