--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import "../styles/global.css";
+import "@/styles/global.css";
 import { Image } from "astro:assets";
-import lifechordLogo from "../lifechord.webp";
-import lifechordBanner from "../lcbanner.webp";
-import bhlogo from "../bhlogo.webp";
-import Navbar from "../components/Navbar.astro";
-import PageTitle from "../components/PageTitle.astro";
+import lifechordLogo from "@/lifechord.webp";
+import lifechordBanner from "@/lcbanner.webp";
+import bhlogo from "@/bhlogo.webp";
+import Navbar from "@/components/Navbar.astro";
+import PageTitle from "@/components/PageTitle.astro";
 ---
 <html lang="en">
     <head>
