--- a/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
+++ b/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
@@ -20,21 +20,18 @@ import PageTitle from "@/components/PageTitle.astro";
         <main class="min-h-screen flex flex-col justify-center items-center p-10 pt-0 gap-y-5 sm:gap-y-10">
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-center">
                 <span class="gap-y-2">
-                    <p> I have collections of sounds and melodies </p>
-                    <p> That scream through the heart </p>
-                    <p> A ripping chord </p>
-                    <p> Through which a voice is heard </p>
+                    <p> I have collections of sounds and melodies that scream through the heart </p>
+                    <p> A ripping chord through which a voice is heard </p>
                 </span>
                 <span class="gap-y-2">
                     <p> Bare witness to my soul and share with me </p>
                     <p> In all the things no one thought could be shared </p>
-                    <p> Every thorn endured Every stride we take </p>
+                    <p> Every thorn endured and every stride we take </p>
                     <p> Are in hopes our thoughts live forever </p>
                 </span>
                 <span class="gap-y-2">
                     <p> In those who love us dearly and who we cherish in the moment </p>
-                    <p> A moment that could last a lifetime </p>
-                    <p> Full of compassion and hope </p>
+                    <p> A moment that could last a lifetime full of compassion and hope </p>
                     <p> Memories that scream </p>
                     <p> I was once here and I lived as much as I could </p>
                 </span>
@@ -42,24 +39,19 @@ import PageTitle from "@/components/PageTitle.astro";
                     <p> In this breath </p>
                     <p> I choose to share and to suffer and to give all I have </p>
                     <p> to those around me to show them that </p>
-                    <p> Every thorn </p>
-                    <p> Every stride </p>
-                    <p> Every road taken </p>
+                    <p> Every thorn, every stride, every road taken </p>
+                    <p> Lead to a sense of community that needs to rebuild it's capacity to empathize </p>
                 </span>
                 <span class="gap-y-2">
-                    <p> Lead to </p>
-                    <p> A sense of community that needs to rebuild it's capacity to empathize </p>
+                    <p> I have collections of sounds and melodies that scream through the heart </p>
+                    <p> A ripping chord through which a voice is heard </p>
                 </span>
                 <span class="gap-y-2">
-                    <p> I have collections of sounds and melodies </p>
-                    <p> That scream through the heart </p>
-                    <p> A ripping chord </p>
-                    <p> Through which a voice is heard </p>
-                </span>
-                <span class="gap-y-2">
-                    <p> A voice inside that echoes through my mind, my life </p>
+                    <p> A voice inside that echoes through my mind and my life </p>
                     <p> Reminding me that we strive to find </p>
                     <p> That special thing that makes life worth living </p>
+                </span>
+                <span class="gap-y-2">
                     <p> A connection </p>
                 </span>
             </div>
