bodies use 100vh

--- a/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
+++ b/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
@@ -15,7 +15,7 @@ import PageTitle from "@/components/PageTitle.astro";
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="manifest" href="/favicon/site.webmanifest">
     </head>
-    <body>
+    <body class="min-h-screen">
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 pt-0 gap-y-5 sm:gap-y-10">
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-center">
