--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,7 +13,7 @@ import "@/styles/global.css";
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="manifest" href="/favicon/site.webmanifest">
     </head>
-    <body>
+    <body class="min-h-screen">
         <div class="h-screen flex flex-col justify-center items-center font-jetbrains gap-y-5">
             <span class="text-5xl font-extrabold">404</span>
             <span>What you seek is not here.</span>
